<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blac_shade_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blac_shade_1"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/cryptoAddTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add_new_crypto_currency"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/crypto_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/cryptoAddTextView"/>

        <EditText
            android:id="@+id/symbolEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/symbol_abridgment"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/nameEditText"/>

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/price"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="numberDecimal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/symbolEditText"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/priceEditText"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:onClick="addNewCryptoCurrency"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:onClick="cancel"/>

        </LinearLayout>

</RelativeLayout>
</ScrollView>